# geektime-c

./: 01｜快速回顾：一个 C 程序的完整生命周期.md  02｜程序基石：数据与量值是如何被组织的？.md  03｜计算单元：运算符是如何工作的？.md  04｜控制逻辑：表达式和语句是如何协调程序运行的？.md  05｜代码封装（上）：函数是如何被调用的？.md  06｜代码封装（下）：函数是如何被调用的？.md  07｜整合数据：枚举、结构与联合是如何实现的？.md  08｜操控资源：指针是如何灵活使用内存的？.md  09｜编译准备：预处理器是怎样处理程序代码的？.md  10 | 标准库：字符、字符串处理与数学计算.md  11｜标准库：深入理解标准 IO.md  12｜标准库：非本地跳转与可变参数是怎样实现的？.md  13｜标准库：你需要了解的 C 并发编程基础知识有哪些？.md  14｜标准库：如何使用互斥量等技术协调线程运行？.md  15｜标准库：信号与操作系统软中断有什么关系？.md  16｜标准库：日期、时间与实用函数.md  17｜标准库：断言、错误处理与对齐.md  18｜极致优化（上）：如何实现高性能的 C 程序？.md  19｜极致优化（下）：如何实现高性能的 C 程序？.md  25｜可执行二进制文件里有什么？.md  27 | 编译器在链接程序时发生了什么？.md  28｜程序可以在运行时进行链接吗？.md  30｜ABI 与 API 究竟有什么区别？.md  31｜程序如何与操作系统交互？.md  LICENSE  README.md  开篇词.md  课前热身.md
22｜生产加速：如何使用结构化编译加速 C 项目构建？/: CMakeLists.txt  Makefile
22｜生产加速：如何使用结构化编译加速 C 项目构建？/include/: mod.h
22｜生产加速：如何使用结构化编译加速 C 项目构建？/src/: main.c  mod.c
